--- a/src/Frontend/Vue3Source/package.json
+++ b/src/Frontend/Vue3Source/package.json
@@ -3,7 +3,8 @@
     "vue": "^3.2.47"
   },
   "scripts": {
-    "build": "node ./build.js"
+    "build-dotnetframework": "node ./BuildDotNetFramework.js",
+    "build-dotnet6": "node ./BuildDotNet6.js"
   },
   "devDependencies": {
     "esbuild": "^0.17.7",
